--- a/app/views/roles/_editable_role.html.erb
+++ b/app/views/roles/_editable_role.html.erb
@@ -22,7 +22,7 @@
               <span class="section">
                 <span class="title"><%= t("permissions.#{group_name}") %></span>
                 <% Hash[*permissions.flatten].values.each do |permission| %>
-                    <label><%= f.check_box :permissions, {:id => permission.dehumanize, :name => "role[permissions][]"}, permission, "" %>
+                    <label><%= f.check_box :permissions, {:id => permission.dehumanize, :name => "role[permissions][]"}, permission, nil %>
                     <%= t("permissions.permission.#{permission}") %></label>
                 <% end %>
               </span>
@@ -46,7 +46,7 @@
               <span class="section">
                 <span class="title"><%= t("forms.record_types.#{record_type}") %></span>
                 <% forms_list.each do |form| %>
-                    <label><%= f.check_box :permitted_form_ids, {:id => "role_#{form.unique_id}", :name => "role[permitted_form_ids][]"}, form.unique_id, "" %>
+                    <label><%= f.check_box :permitted_form_ids, {:id => "role_#{form.unique_id}", :name => "role[permitted_form_ids][]"}, form.unique_id, nil %>
                     <%= form.name %></label>
                 <% end %>
               </span>
