--- a/app/views/users/_editable_user.html.erb
+++ b/app/views/users/_editable_user.html.erb
@@ -103,9 +103,11 @@
     <% content_for :record_sub_nav do %>
     <!--TODO: After we got the user object in the session replace the DB query with User object-->
       <%= render_controls(@user) %>
+      <% if false %>
       <%= link_to user_history_path(@user), :class=>'green-button small right' do %>
           <%= icon('clock-o') %>
           <span class="log"><%= t("user.user_action_history") %></span>
+      <% end %>
       <% end %>
     <% end %>
 <% end %>
