--- a/app/views/primero_modules/_editable.html.erb
+++ b/app/views/primero_modules/_editable.html.erb
@@ -1,5 +1,5 @@
 <%= resource_edit_field(object, 'name', 'name', 'text_field', true) %>
-<%= resource_edit_field(object, 'description', 'description', 'text_area', true) %>
+<%= resource_edit_field(object, 'description', 'description', 'text_area') %>
 
 <div class="row">
   <div class="medium-3 columns">
@@ -12,7 +12,9 @@
       <%= form_builder.select :program_id, options_for_select(@programs.map{|p|[p.name, p.id]}) %>
     </span>
   </div>
-  <div class="medium-1 columns"></div>
+  <div class="medium-1 columns">
+    <span class="required">*</div>
+  </div>
 </div>
 <div class="row">
   <div class="medium-3 columns">
@@ -32,7 +34,9 @@
       </span>
     </span>
   </div>
-  <div class="medium-1 columns"></div>
+  <div class="medium-1 columns">
+    <span class="required">*</div>
+  </div>
 </div>
 <div class="row">
   <div class="medium-3 columns">
@@ -55,5 +59,7 @@
       <% end %>
     </span>
   </div>
-  <div class="medium-1 columns"></div>
+  <div class="medium-1 columns">
+    <span class="required">*</div>
+  </div>
 </div>
