Added program start and end dates.

--- a/app/views/primero_programs/show.html.erb
+++ b/app/views/primero_programs/show.html.erb
@@ -1,6 +1,8 @@
 <% content_for :resource_show_fields do %>
   <%= resource_show_field @primero_program, 'name', 'name' %>
   <%= resource_show_field @primero_program, 'description', 'description' %>
+  <%= resource_show_field @primero_program, 'start_date', 'primero_program.start_date' %>
+  <%= resource_show_field @primero_program, 'end_date', 'primero_program.end_date' %>
 <% end %>
 
 <%= render partial: 'shared_configuration_resource/show', locals: {object: @primero_program} %>
