--- a/app/views/primero_programs/_editable.html.erb
+++ b/app/views/primero_programs/_editable.html.erb
@@ -1,2 +1,4 @@
 <%= resource_edit_field(object, 'name', 'name', 'text_field', true) %>
 <%= resource_edit_field(object, 'description', 'description', 'text_area') %>
+<%= resource_edit_field(object, 'start_date', 'primero_program.start_date', 'date') %>
+<%= resource_edit_field(object, 'end_date', 'primero_program.end_date', 'date') %>
