Corrected capitalization on user, proper translations for modules on user.

--- a/app/views/users/_editable_user.html.erb
+++ b/app/views/users/_editable_user.html.erb
@@ -33,7 +33,7 @@
       <% @roles.each do |role| %>
           <div>
             <%= f.check_box :role_ids, {:id => "user_#{role.name}", :name => "user[role_ids][]"}, role.id, nil %>
-            <%= f.label role.name %>
+            <%= f.label :role_ids, role.name %>
           </div>
       <% end %>
         </div>
@@ -43,14 +43,14 @@
       <div class="row">
         <div class="medium-3 columns">
           <span class="tool-tip-label">
-            <label class="key"><%= t("modules.label") %></label>
+            <label class="key"><%= t("primero_modules.label") %></label>
           </span>
         </div>
         <div class="medium-8 columns">
           <% @modules.each do |primero_module| %>
             <div>
                 <%= f.check_box :module_ids, {id: "user_#{primero_module.name}", name: "user[module_ids][]"}, primero_module.id, nil %>
-                <%= f.label primero_module.name %>
+                <%= f.label :module_ids, primero_module.name %>
             </div>
           <% end %>
         </div>
@@ -67,7 +67,7 @@
           <% @user_groups.each do |user_group| %>
             <div>
                 <%= f.check_box :user_group_ids, {id: "user_#{user_group.name}", name: "user[user_group_ids][]"}, user_group.id, nil %>
-                <%= f.label user_group.name %>
+                <%= f.label :user_group_ids, user_group.name %>
             </div>
           <% end %>
         </div>
