--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,7 +39,7 @@
 
         <div class="row">
           <div class="medium-4 columns">
-            <label class="key"><%= t("modules.label") %>:</label>
+            <label class="key"><%= t("primero_modules.label") %>:</label>
           </div>
           <div class="medium-8 columns">
             <%= @user.modules.map(&:name).join(", ") %>
