--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -31,6 +31,24 @@
   }
 }
 
+.error label, .error label.error {
+  color: #b50904 !important;
+}
+
+small.error {
+  background: none !important;
+  color: #b50904 !important;
+  font-style: normal !important;
+
+  &:before {
+    content: "\26A0";
+    font-size: 1.2rem;
+    color: #333;
+    position: absolute;
+    margin: 0 0 0 -25px
+  }
+}
+
 fieldset.no-border {
   border: none !important;
   padding: 0 !important;
@@ -180,4 +198,58 @@ table.dataTable {
 
 .ui-corner-all {
   border-radius: 0px;
+}
+
+////////////////////////////////////////////////
+// Form Section Customization
+////////////////////////////////////////////////
+
+.lang_title  {
+  font-weight: bold;
+  span {
+    color: #777;
+    font-weight: normal;
+  }
+}
+
+.translation {
+  border-top: 1px solid $stroke_green_color;
+  padding-top: 20px;
+
+  .translation_forms {
+    border-top: 1px dashed $stroke_green_color;
+    padding-top: 20px;
+  }
+}
+
+.form_info {
+  font-size: .95rem;
+  font-weight: lighter;
+  line-height: 26px;
+}
+
+.side-tab-content hr {
+  background: none;
+  border-bottom: 1px solid $stroke_green_color;
+}
+
+table.in_content_area tbody tr td:first-child, table.in_content_area thead th:first-child {
+  border-left: none !important;
+}
+
+table.in_content_area tbody tr td:last-child, table.in_content_area thead th:last-child {
+  border-right: none !important;
+}
+
+tr td span {
+  font-size: .75rem;
+  color: #777;
+}
+
+.sidebar_help {
+  text-transform: uppercase;
+  font-size: .8rem;
+  color: #777;
+  width: 230px;
+  margin: 0 0 0 45px;
 }
