--- a/app/views/form_section/_add_name_field.html.erb
+++ b/app/views/form_section/_add_name_field.html.erb
@@ -7,7 +7,7 @@
   <% unless is_translation %>
     <div class="row">
       <div class="large-3 medium-3 columns">
-        <label class="key"><%= t("fields.db_name") %></label>
+        <label class="key inline"><%= t("fields.db_name") %></label>
       </div>
       <div class="large-9 medium-9 columns">
         <%= fld.send "#{field_type}", "#{field_name}".to_sym %>
