--- a/app/views/form_section/_list_view_table.html.erb
+++ b/app/views/form_section/_list_view_table.html.erb
@@ -1,4 +1,4 @@
-<table id="form_sections" class="list_table_2 dataTables" width="100%">
+<table id="form_sections" class="list_table_2 dataTable in_content_area" width="100%">
   <thead>
     <tr>
       <th><%= t "form_sectoin.name" %></th>
@@ -18,7 +18,7 @@
             <td><%= form.description %></td>
             <td>
               <%= link_to t("buttons.edit"), edit_form_section_path(form.section_name, module_id: primero_module.id) %>
-              &nbsp;
+              <br>
               <% unless form.core_form %>
                 <%= link_to t("buttons.delete"), form_section_path(form), data: {confirm: t("form_section.confirm_delete")}, method: :delete %>
               <% end %>
@@ -28,4 +28,3 @@
     <% end %>
   </tbody>
 </table>
-
