--- a/app/views/form_section/_new_or_edit_form_section.html.erb
+++ b/app/views/form_section/_new_or_edit_form_section.html.erb
@@ -12,15 +12,15 @@
   </div>
 </div>
 
-<div class="row collapse" data-equalizer>
-  <div class="medium-6 columns form-section-content">
-    <%= form_for @form_section, :url => url_for_form_section(@form_section), :html => {:class => ""} do |f| %>
+<div class="row">
+  <div class="medium-12 columns form-section-content">
+    <%= form_for @form_section, :url => url_for_form_section(@form_section), :html => {:class => "default-form", "data-abide" => ''} do |f| %>
       <div class="form_details_panel">
         <div class="default_lang_panel">
           <div class="lang_title">
             <%= t("forms.initial_language") %>: <span><%= t("home.#{I18n.default_locale}") %></span>
           </div>
-          <fieldset data-equalizer-watch>
+          <fieldset class="no-border">
             <%= hidden_field_tag "module_id", @module_id, :id => "form_section_module_id" %>
             <%= hidden_field_tag "form_section[parent_form]", @parent_form, :id => "form_section_parent_form" %>
 
@@ -34,12 +34,13 @@
                 </div>
               </div>
             <% end %>
-            <div class="row">
+            <div class="row name-field">
               <div class="medium-3 columns">
                 <%= f.label :name, t("name", :locale => I18n.default_locale), :class => 'key inline' %>
               </div>
               <div class="medium-9 columns">
-                <%= f.text_field "name_#{I18n.default_locale}", :id => "form_section_name" %>
+                <%= f.text_field "name_#{I18n.default_locale}", :id => "form_section_name", required: '' %>
+                <small class="error"><%= t('form_section.required_field', field: t("name", :locale => I18n.default_locale)) %></small>
               </div>
             </div>
             <div class="row">
@@ -60,22 +61,24 @@
             </div>
             <div class="row">
               <div class="medium-3 columns">
-                <%= f.label :form_group_name, t("form_group_name", :locale => I18n.default_locale), :class => 'key inline' %>
+                <%= f.label :form_group_name, t("form_section.form_group_name", :locale => I18n.default_locale), :class => 'key inline' %>
               </div>
               <div class="medium-9 columns">
-                <%= f.text_field "form_group_name", :id => "form_section_form_group_name" %>
+                <%= f.text_field "form_group_name", :id => "form_section_form_group_name", required: '' %>
+                <small class="error"><%= t('form_section.required_field', field: t("form_section.form_group_name", :locale => I18n.default_locale)) %></small>
               </div>
             </div>
           </fieldset>
         </div>
       </div>
   </div>
+</div>
+<div class="row">
   <div class="translation_lang_panel">
-    <div class="medium-6 columns">
+    <div class="medium-12 columns">
       <%= render :partial => "form_section/add_translations", :locals => {:fields => [{:name => :text_field}, {:description => :text_field}, {:help_text => :text_field}], :fld => f, :show_drop_down => true} %>
     </div>
+    <div class="clearfix"></div>
   </div>
   <% end %>
 </div>
-
-
