--- a/app/views/form_section/_subform.html.erb
+++ b/app/views/form_section/_subform.html.erb
@@ -18,9 +18,9 @@
        summary_section_class = "summary_section"
      end
    %>
-  <div class="subforms <%=summary_section_class%>" id="<%= subform.name %>" <%=data_shared_subform%>>
+  <div class="subforms <%=summary_section_class%>" id="<%= subform.name %>" <%=data_shared_subform%> data-form_group_name=<%=form_group_name.dehumanize%>>
     <% (number_of_subforms).times do |i| %>
-    <div id="subform_container_<%= subform.name %>_<%= i %>" class="subform_container">
+    <div id="subform_container_<%= subform.name %>_<%= i %>" class="subform_container" data-subform_index="<%= i %>">
       <fieldset id="subform_<%= subform.name %>_<%= i %>" class="<%= subform.name %> subform no-border">
       <% fk_unique_id = field_keys(subform_name, i, 'unique_id', form_group_name) %>
       <%= hidden_field_tag(field_tag_name(formObject, nil, fk_unique_id),
