--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -253,3 +253,8 @@ tr td span {
   width: 230px;
   margin: 0 0 0 45px;
 }
+
+.section_seperator {
+  border-top: 1px dashed $stroke_green_color;
+  padding-top: 20px;
+}
