--- a/app/views/lookups/_list_view_table.html.erb
+++ b/app/views/lookups/_list_view_table.html.erb
@@ -1,4 +1,4 @@
-<table id="list_table_2" class="list_table_2">
+<table id="list_table_2" class="list_table_2 dataTable in_content_area">
   <thead>
   <tr>
     <th><%= t "lookup.name" %></th>
@@ -14,7 +14,7 @@
             <td><%= lkp.lookup_values.join(", ") %></td>
             <td>
               <%= link_to t("buttons.edit"), edit_lookup_path(lkp) %>
-              &nbsp;
+              <br>
               <%= link_to t("buttons.delete"), lookup_path(lkp), data: {confirm: t("lookup.confirm_delete")}, method: :delete %>
             </td>
           </tr>
