Added translations for breadcrumbs

--- a/app/views/form_section/edit.html.erb
+++ b/app/views/form_section/edit.html.erb
@@ -1,6 +1,5 @@
 <% content_for :breadcrumbs do %>
-<!-- TODO: Translate this -->
- Edit Form
+  <%= t('form_section.edit') %>
 <% end %>
 
 <div class="page-content-new row collapse" data-equalizer>
