--- a/app/views/form_section/index.html.erb
+++ b/app/views/form_section/index.html.erb
@@ -1,6 +1,5 @@
 <% content_for :breadcrumbs do %>
-<!-- TODO: Translate this -->
- Forms
+  <%= t('form_section.manage') %>
 <% end %>
 
 <% content_for :record_sub_nav do %>
