--- a/app/views/form_section/new.html.erb
+++ b/app/views/form_section/new.html.erb
@@ -1,6 +1,5 @@
 <% content_for :breadcrumbs do %>
-<!-- TODO: Translate this -->
- New Form
+  <%= t('form_section.create') %>
 <% end %>
 
 <div class="page-content-new row collapse" data-equalizer>
