--- a/app/views/shared/_side_tab.html.erb
+++ b/app/views/shared/_side_tab.html.erb
@@ -1,7 +1,7 @@
  <div class="side-tab" data-equalizer-watch>
   <ul class="side-nav">
     <%# TODO: We are hiding the user options for the time being. %>
-    <li class=<%= (highlight_page == 'users' ? 'current' : '') %>><%= link_to I18n.t("users.label"), users_path if can?(:read, User)%></li>
+    <li class=<%= (highlight_page == 'users' ? 'current' : '') %>><%= link_to I18n.t("users.label"), users_path if can?(:index, User) && can?(:index, Role)%></li>
     <% if false %>
     <li class=<%= (highlight_page == 'unverified' ? 'current' : '') %>>
     	<%= link_to I18n.t("users.unverified"), unverified_users_path if can?(:show, User)  %></li>
