--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -7,13 +7,13 @@
         <%= render :partial => 'user_disabled_checkbox', :locals => {:user => user} %>
       </td>
   <% end %>
-  <% if can? :show, User %>
+  <% if can? :show, user %>
       <td><%= link_to t("users.actions.show"), user %></td>
   <% end %>
-  <% if can? :edit, User %>
+  <% if can? :edit, user %>
       <td><%= link_to t("buttons.edit"), edit_user_path(user) %></td>
   <% end %>
-  <% if can? :destroy, User %>
+  <% if can? :destroy, user %>
       <td>
         <% if current_user_name != user.user_name %>
             <%= link_to t("user.actions.delete"), user, data: {confirm: t("user.messages.confirmation")}, method: :delete %></td>
