--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -4,7 +4,7 @@
 
 <% content_for :record_sub_nav_controls do %>
   <% if can?(:create, Role) %>
-    <%= link_to content_tag(:span, t("role.create"), :class => 'create_user'), new_role_path, :class => 'btn green-button' %>
+    <li><%= link_to content_tag(:span, t("role.create"), :class => 'create_user'), new_role_path, :class => 'btn green-button' %></li>
   <% end %>
   <%#= render 'exports/button' %>
   <%# TODO: Hiding imports so that QA doesn't get into trouble %>
@@ -17,59 +17,52 @@
   </div>
   <div class="large-8 medium-8 columns side-tab-content-container">
     <div class="side-tab-content" data-equalizer-watch>
-      <div class="row">
-        <div class="large-12 columns">
-          <form class="filter_bar">
-            <% permissions_for_filter = translated_permissions %>
-            <% permissions_for_filter << [I18n.t("All", :scope => 'permissions.permission'), ["All"]] %>
-            <div class="row">
-              <div class="medium-6 columns">
-                <div class="float_left"> <%= t("roles.actions.show") %>: <%= select_tag :show, grouped_options_for_select(permissions_for_filter, params[:show]), :onchange => "this.form.submit()"  %> </div>
-              </div>
-              <div class="medium-6 columns">
-                <div class="float_left"> <%= t("roles.sort_by.label") %>:  <%= select_tag :sort_by_descending_order, options_for_select([[t("roles.sort_by.ascending"),"false"],[ t("roles.sort_by.descending"), "true"]], params[:sort_by_descending_order]), { :onchange => "this.form.submit();"} %> </div>
-              </div>
+      <form class="filter_bar">
+        <% permissions_for_filter = translated_permissions %>
+        <% permissions_for_filter << [I18n.t("All", :scope => 'permissions.permission'), ["All"]] %>
+        <div class="row">
+          <div class="medium-6 columns">
+            <div class="float_left">
+              <small class="scope_label"><%= t("roles.actions.show") %></small> <%= select_tag :show, grouped_options_for_select(permissions_for_filter, params[:show]), :onchange => "this.form.submit()"  %>
             </div>
-          </form>
-          <div class="show_count"> <%= t("roles.actions.show_all") %> <%= pluralize(@roles.length, t("record")) %> </div>
-          <table id="list_table" class="list_table">
-            <thead>
-              <tr>
-                  <th><%= t("role.name") %></th>
-                  <th><%= t("description") %></th>
-                <% if can?(:view, Role) %>
-                    <th></th>
-                <% end %>
-                <% if can?(:edit, Role) %>
-                  <th></th>
-                <% end %>
-                <% if can?(:destroy, Role) %>
-                    <th></th>
-                <% end %>
-              </tr>
-            </thead>
-            <tbody>
-              <% @roles.each do |role| %>
-                  <tr>
-                    <td class='role_name'><%= role.name %></td>
-                    <td><%= truncate(role.description, :length => 40) %></td>
-                    <% if can?(:view, role) %>
-                        <td><%= link_to(t("roles.actions.show"), role_path(role))%></td>
-                    <% end %>
-                    <% if can?(:edit, role) %>
-                        <td><%= link_to(t("roles.actions.edit"), edit_role_path(role))%></td>
-                    <% end %>
-                    <% if can?(:destroy, role) %>
-                        <td>
-                          <%= link_to t("roles.actions.delete"), role, data: {confirm: t("roles.messages.confirmation")}, method: :delete %>
-                        </td>
-                    <% end %>
-                  </tr>
-              <% end %>
-            </tbody>
-          </table>
+          </div>
+          <div class="medium-6 columns">
+            <div class="float_left">
+              <small class="scope_label"><%= t("roles.sort_by.label") %></small>  <%= select_tag :sort_by_descending_order, options_for_select([[t("roles.sort_by.ascending"),"false"],[ t("roles.sort_by.descending"), "true"]], params[:sort_by_descending_order]), { :onchange => "this.form.submit();"} %>
+            </div>
+          </div>
         </div>
-      </div>
+      </form>
+      <table id="list_table" class="list_table_2 dataTable in_content_area">
+        <thead>
+          <tr>
+              <th><%= t("role.name") %></th>
+              <th><%= t("description") %></th>
+              <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @roles.each do |role| %>
+              <tr>
+                <td class='role_name'><%= role.name %></td>
+                <td><%= truncate(role.description, :length => 40) %></td>
+                <td>
+                  <% if can?(:view, role) %>
+                    <%= link_to(t("roles.actions.show"), role_path(role))%>
+                    <br>
+                  <% end %>
+                  <% if can?(:edit, role) %>
+                    <%= link_to(t("roles.actions.edit"), edit_role_path(role))%>
+                    <br>
+                  <% end %>
+                  <% if can?(:destroy, role) %>
+                    <%= link_to t("roles.actions.delete"), role, data: {confirm: t("roles.messages.confirmation")}, method: :delete %>
+                  <% end %>
+                </td>
+              </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
