--- a/app/views/primero_modules/_editable.html.erb
+++ b/app/views/primero_modules/_editable.html.erb
@@ -1,6 +1,5 @@
 <%= resource_edit_field(object, 'name', 'name', 'text_field', true) %>
 <%= resource_edit_field(object, 'description', 'description', 'text_area') %>
-
 <div class="row">
   <div class="medium-3 columns">
     <span class="tool-tip-label">
@@ -13,7 +12,7 @@
     </span>
   </div>
   <div class="medium-1 columns">
-    <span class="required">*</div>
+    <span class="required">*</span>
   </div>
 </div>
 <div class="row">
@@ -22,7 +21,7 @@
       <%= form_builder.label :associated_record_types, t("primero_module.associated_record_types"), class: 'key' %>
     </span>
   </div>
-  <div class="medium-8 columns">
+  <div class="medium-8 columns record_types">
     <span class="value value_form">
       <span class="section">
         <% FormSection::RECORD_TYPES.each do |record_type| %>
@@ -35,10 +34,10 @@
     </span>
   </div>
   <div class="medium-1 columns">
-    <span class="required">*</div>
+    <span class="required">*</span>
   </div>
 </div>
-<div class="row">
+<div class="row associated_form_ids">
   <div class="medium-3 columns">
     <span class="tool-tip-label">
       <%= form_builder.label :associated_form_ids, t("primero_module.associated_form_ids"), :class => 'key' %>
@@ -47,9 +46,9 @@
   <div class="medium-8 columns">
     <span class="value value_form">
       <% @forms_by_record_type.each do |record_type, forms_list| %>
-        <span class="section">
+        <span class="section <%= record_type %>">
           <span class="title"><%= t("forms.record_types.#{record_type}") %></span>
-          <% forms_list.each do |form| %>
+          <% forms_list.sort_by{ |f| f.order }.each do |form| %>
               <label>
                 <%= form_builder.check_box :associated_form_ids, {id: "primero_module_#{form.unique_id}", name: "primero_module[associated_form_ids][]"}, form.unique_id, nil %>
                 <%= form.name %>
@@ -60,6 +59,6 @@
     </span>
   </div>
   <div class="medium-1 columns">
-    <span class="required">*</div>
+    <span class="required">*</span>
   </div>
 </div>
