--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -34,7 +34,7 @@
       <th><%= t("form_section.help_text") %></th>
       <th><%= t("fields.type") %></th>
       <th align="center"><%= t("form_section.hide") %></th>
-      <th align="center" width="150"><%= t("fields.actions") %></th>
+      <th align="center"><%= t("fields.actions") %></th>
     </tr>
   </thead>
   <tbody>
@@ -79,7 +79,7 @@
                                                                        :warning => I18n.t("messages.warning")} %> <%= hidden_field_tag "field_name" "#{field.name}" %>
                 </li>
                 <li>
-                  <a class="link_moveto"><%= t("fields.move_to") %></a>
+                  <% if false %><a class="link_moveto"><%= t("fields.move_to") %></a><% end %>
                 </li>
               <% end %>
             </ul>
