--- a/app/views/form_section/_new_or_edit_form_section.html.erb
+++ b/app/views/form_section/_new_or_edit_form_section.html.erb
@@ -53,21 +53,12 @@
             </div>
             <div class="row">
               <div class="medium-3 columns">
-                <%= f.label :help_text, t("help_text", :locale => I18n.default_locale), :class => 'key inline' %>
-              </div>
-              <div class="medium-9 columns">
-                <%= f.text_field "help_text_#{I18n.default_locale}", :id => "form_section_help_text" %>
-              </div>
-            </div>
-            <div class="row">
-              <div class="medium-3 columns">
                 <%= f.label :form_group_name, t("form_section.form_group_name", :locale => I18n.default_locale), :class => 'key inline' %>
               </div>
               <div class="medium-9 columns">
                 <%= f.select "form_group_name", options_for_select(@list_form_group_names, @form_section.form_group_name || ''), {},
-                    required: "", 'data-placeholder' => t("fields.chosen_placeholder"),
+                    required: "", 'data-placeholder' => t("fields.select_box_empty_item"),
                     class: "chosen-select-or-new", id: "form_section_form_group_name" %>
-                <%# f.select "form_group_name", :id => "form_section_form_group_name", required: '' %>
                 <small class="error"><%= t('form_section.required_field', field: t("form_section.form_group_name", :locale => I18n.default_locale)) %></small>
               </div>
             </div>
