--- a/app/views/users/_editable_user.html.erb
+++ b/app/views/users/_editable_user.html.erb
@@ -30,12 +30,16 @@
           </span>
         </div>
         <div class="medium-8 columns">
-      <% @roles.each do |role| %>
-          <div>
-            <%= f.check_box :role_ids, {:id => "user_#{role.name}", :name => "user[role_ids][]"}, role.id, nil %>
-            <%= f.label :role_ids, role.name %>
-          </div>
-      <% end %>
+          <span class="value value_form">
+            <span class="section">
+              <% @roles.each do |role| %>
+                  <label>
+                    <%= f.check_box :role_ids, {:id => "user_#{role.name}", :name => "user[role_ids][]"}, role.id, nil %>
+                    <%= role.name %>
+                  </label>
+              <% end %>
+            </span>
+          </span>
         </div>
         <div class="medium-1 columns"> </div>
       </div>
@@ -47,12 +51,16 @@
           </span>
         </div>
         <div class="medium-8 columns">
-          <% @modules.each do |primero_module| %>
-            <div>
-                <%= f.check_box :module_ids, {id: "user_#{primero_module.name}", name: "user[module_ids][]"}, primero_module.id, nil %>
-                <%= f.label :module_ids, primero_module.name %>
-            </div>
-          <% end %>
+          <span class="value value_form">
+            <span class="section">
+              <% @modules.each do |primero_module| %>
+                <label>
+                    <%= f.check_box :module_ids, {id: "user_#{primero_module.name}", name: "user[module_ids][]"}, primero_module.id, nil %>
+                    <%= primero_module.name %>
+                </label>
+              <% end %>
+            </span>
+          </span>
         </div>
         <div class="medium-1 columns"> </div>
       </div>
@@ -64,12 +72,16 @@
           </span>
         </div>
         <div class="medium-8 columns">
-          <% @user_groups.each do |user_group| %>
-            <div>
-                <%= f.check_box :user_group_ids, {id: "user_#{user_group.name}", name: "user[user_group_ids][]"}, user_group.id, nil %>
-                <%= f.label :user_group_ids, user_group.name %>
-            </div>
-          <% end %>
+          <span class="value value_form">
+            <span class="section">
+              <% @user_groups.each do |user_group| %>
+                <label>
+                    <%= f.check_box :user_group_ids, {id: "user_#{user_group.name}", name: "user[user_group_ids][]"}, user_group.id, nil %>
+                    <%= user_group.name %>
+                </label>
+              <% end %>
+            </span>
+          </span>
         </div>
         <div class="medium-1 columns"> </div>
       </div>
