PRIMERO-699 Incident - Implement MRM Incident Montior Dashboard.
1. Added Create New Incident buttton.
2. Added Open Incidents.
3. Added New Incidents Assigned To You.
4. Added Recent Flagged Incidents.
5. Added view to retrieve the flags by flag date.
6. Adeed view to retrieve the flags by latest creation date.
7. Refactoring some of the template to be shared with cases.

NOTE: no test cases yet.

--- a/app/assets/stylesheets/primero/dashboard.scss
+++ b/app/assets/stylesheets/primero/dashboard.scss
@@ -121,6 +121,10 @@
       font-family: 'Roboto-Medium', san-serif;
     }
 
+    a.uppercase {
+      text-transform: uppercase;
+    }
+
     .panel_header {
       h4 {
         font-size: $thirteen_px;
