--- a/app/views/home/_recently_flagged.html.erb
+++ b/app/views/home/_recently_flagged.html.erb
@@ -1,15 +1,17 @@
 <div class="panel">
  <div class="panel_header">
-  <h4>Recently Flagged Cases</h4>  
+  <h4><%= t("dashboard.recently_flagged_#{model.name.underscore}") %></h4>
  </div>
- <div class="panel_content scrollable">
+ <div class="panel_content">
   <ul>
-  	<% recently_flagged.each do |r| %>
-    	<li>
-    		<%= link_to "#{r.parent_record.short_id} #{r.parent_record.name}", case_path(r.parent_record) %>
-    		<p><%= r.message %></p>
-    	</li>
+    <% recently_flagged.each do |r| %>
+      <li>
+        <%= link_to link_dashboard_title(r.parent_record), link_dashboard_path(r.parent_record) %>
+        <p><%= r.message %></p>
+      </li>
     <% end %>
+    <li><%= link_to t("dashboard.link_see_all_#{model.name.underscore}", :count => recently_flagged_count), 
+                    index_link_dashboard_path(model), class: 'uppercase' %></li>
   </ul>
  </div>
 </div>
