--- a/app/assets/stylesheets/primero/dashboard.scss
+++ b/app/assets/stylesheets/primero/dashboard.scss
@@ -1,5 +1,4 @@
 #dashboard {
-  margin-top: 50px;
 
   .panel {
     border: 1px solid $stroke_green_color;
@@ -7,7 +6,7 @@
     padding: 0;
     
     .panel_content {
-      padding: 10px;
+      padding: 0px 10px 10px 10px;
     }
 
     .panel_header {
@@ -90,6 +89,9 @@
 
   #sidebar {
     font-size: $thirteen_px;
+    padding: 0;
+    width: 225px;
+    float: right;
 
     .scrollable {
       height: 300px;
@@ -105,6 +107,7 @@
     ul {
       list-style-type: none;
       margin-left: 0;
+      margin-bottom: 0;
 
       li {
         border-bottom: 1px dashed #ccc;
