Fixed issue with date_ranges having the wrong date format on edit, and styled date picker to fit in

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -514,3 +514,55 @@ fieldset {
   float: right;
   margin-left: 10px;
 }
+
+
+////////////////////////////////////////////////
+// Date Picker
+////////////////////////////////////////////////
+
+.ui-datepicker {
+  background: $desat_green_color !important;
+  -webkit-box-shadow: 0 0 4px 1px rgba(0,0,0,.2);
+  box-shadow: 0 0 4px 1px rgba(0,0,0,.2);
+  border: 1px solid $stroke_green_color !important;
+}
+
+select.ui-datepicker-month {
+  margin-right: 1px !important;
+  border: 1px solid $stroke_green_color;
+}
+
+select.ui-datepicker-year {
+  margin-left: 1px !important;
+  border: 1px solid $stroke_green_color;
+}
+
+.ui-datepicker .ui-datepicker-prev , .ui-datepicker .ui-datepicker-next  {
+  border: none !important;
+}
+
+.ui-datepicker-calendar {
+  border: none;
+
+  thead th {
+    background: $desat_green_color;
+    color: $green_color;
+  }
+
+  a {
+    &.ui-state-default {
+      border: 1px solid $stroke_green_color;
+      color: $green_color;
+      background: $light_green_color;
+
+      &:hover {
+        background: $desat_green_color;
+      }
+    }
+
+    &.ui-state-active  {
+      background: $desat_green_color;
+      border: 1px solid $desat_green_color;
+    }
+  }
+}
